Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/SMAX_PS_Translation__c.object-meta.xml
<CustomObject>
    <description>Used to translate the WO fields for output docs.  This is needed for offline use by the mobile</description>
    <label>Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>