Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/BD_Credit_Collections_Email__c.field-meta.xml
<CustomField>
    <fullName>BD_Credit_Collections_Email__c</fullName>
    <label>Credit &amp; Collections Email</label>
    <type>Email</type>
</CustomField>