Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/BD_EUROIMMUN_Address_Line1__c.field-meta.xml
<CustomField>
    <fullName>BD_EUROIMMUN_Address_Line1__c</fullName>
    <label>EUROIMMUN Address Line1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>