Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/BD_EUROIMMUN_Instrument_Working__c.field-meta.xml
<CustomField>
    <fullName>BD_EUROIMMUN_Instrument_Working__c</fullName>
    <label>EUROIMMUN Instrument Working?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>