Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/BD_EUROIMMUN_Product__c.field-meta.xml
<CustomField>
    <fullName>BD_EUROIMMUN_Product__c</fullName>
    <label>EUROIMMUN Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>