Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/BD_EUROIMMUN_Website_Phone__c.field-meta.xml
<CustomField>
    <fullName>BD_EUROIMMUN_Website_Phone__c</fullName>
    <label>EUROIMMUN Website &amp; Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>