Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Access_Instructions__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Access_Instructions__c</fullName>
    <description>for schedule technician vf email</description>
    <inlineHelpText>for schedule technician vf email</inlineHelpText>
    <label>Access Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>