Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Account__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Account__c</fullName>
    <description>for technician schedule vf email</description>
    <inlineHelpText>for technician schedule vf email</inlineHelpText>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>