Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Address_Line2__c</fullName>
    <label>Address Line2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>