Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Address_Telephone__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Address_Telephone__c</fullName>
    <label>Address Telephone</label>
    <length>50</length>
    <type>Text</type>
</CustomField>