Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Assignment_Dates__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Assignment_Dates__c</fullName>
    <description>for schedule technician vf email template</description>
    <inlineHelpText>for schedule technician vf email template</inlineHelpText>
    <label>Assignment Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>