Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Base_Price__c</fullName>
    <description>Denotes the base price for an estimate</description>
    <inlineHelpText>Denotes the base price for an estimate</inlineHelpText>
    <label>Base Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>