Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Bill_To_Name__c</fullName>
    <label>Bill To Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>