Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Client_Ability_to_Resolve_Issue__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Client_Ability_to_Resolve_Issue__c</fullName>
    <description>for schedule technician vf email</description>
    <inlineHelpText>for schedule technician vf email</inlineHelpText>
    <label>Client Ability to Resolve Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>