Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Contract_End_Date__c</fullName>
    <description>for schedule technician vf email</description>
    <inlineHelpText>for schedule technician vf email</inlineHelpText>
    <label>Contract End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>