Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Contract_Start_Date__c</fullName>
    <description>for schedule technician email vf template</description>
    <inlineHelpText>for schedule technician email vf template</inlineHelpText>
    <label>Contract Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>