Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Customer_Contact__c</fullName>
    <label>Customer Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>