Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Duration_hr_s__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Duration_hr_s__c</fullName>
    <description>for schedule email vf template</description>
    <inlineHelpText>for schedule email vf template</inlineHelpText>
    <label>Duration:  hr(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>