Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Email_ID__c</fullName>
    <label>Email ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>