Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Equipment_Location__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Equipment_Location__c</fullName>
    <label>Equipment Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>