Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Estimate_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Estimate_Email_Body__c</fullName>
    <label>Estimate Email Body</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>