Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Estimate_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Estimate_Email_Subject__c</fullName>
    <label>Estimate Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>