Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_has_been_assigned_to_you__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_has_been_assigned_to_you__c</fullName>
    <description>For assignment email template</description>
    <inlineHelpText>For assignment email template</inlineHelpText>
    <label>has been assigned to you :</label>
    <length>255</length>
    <type>Text</type>
</CustomField>