Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Internal_Description__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Internal_Description__c</fullName>
    <label>Internal Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>