Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Is_Default__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this Translation as the Default for this Country + OwnedByCompany</description>
    <inlineHelpText>Marks this Translation as the Default for this Country + OwnedByCompany</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>