Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Location_Details__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Location_Details__c</fullName>
    <description>for scheduling email template vf</description>
    <inlineHelpText>for scheduling email template vf</inlineHelpText>
    <label>Location Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>