Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Logo_Image__c</fullName>
    <description>Name of the Salesforce Document with the Logo Image</description>
    <inlineHelpText>Name of the Salesforce Document with the Logo Image</inlineHelpText>
    <label>Logo Image</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>