Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Lot_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Lot_Serial_Number__c</fullName>
    <label>Lot/Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>