Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Material_Description__c</fullName>
    <description>schedule technician email vf</description>
    <inlineHelpText>schedule technician email vf</inlineHelpText>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>