Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Mobile_Number__c</fullName>
    <description>Translation for Mobile Number</description>
    <label>Mobile Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>