Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Model__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Model__c</fullName>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>