Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_No_Calibrated_Tools_Used__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_No_Calibrated_Tools_Used__c</fullName>
    <label>No Calibrated Tools Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>