Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Order_Status__c</fullName>
    <label>Order Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>