Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Order_Type__c</fullName>
    <description>for technician scheduling email template</description>
    <inlineHelpText>for technician scheduling email template</inlineHelpText>
    <label>Order Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>