Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Page_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Page_Number__c</fullName>
    <label>Page Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>