Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_PM_OQ_IPV_Left__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_PM_OQ_IPV_Left__c</fullName>
    <label>PM OQ IPV Left</label>
    <length>100</length>
    <type>Text</type>
</CustomField>