Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>100</length>
    <type>Text</type>
</CustomField>