Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Record_Type__c</fullName>
    <description>for technician schedule email</description>
    <inlineHelpText>for technician schedule email</inlineHelpText>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>