Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Reference_Number__c</fullName>
    <description>Reference Number used in Estimate templates</description>
    <label>Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>