Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Remote_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Remote_Service_Report__c</fullName>
    <description>Title for Remote Service Report</description>
    <inlineHelpText>Title for Remote Service Report</inlineHelpText>
    <label>Remote Service Report</label>
    <length>100</length>
    <type>Text</type>
</CustomField>