Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Service_Report__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Report__c</fullName>
    <label>Service Report</label>
    <length>50</length>
    <type>Text</type>
</CustomField>