Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_SLA_Terms_Notes__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_SLA_Terms_Notes__c</fullName>
    <description>for schedule email vf template</description>
    <inlineHelpText>for schedule email vf template</inlineHelpText>
    <label>SLA Terms Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>