Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_State_Province__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_State_Province__c</fullName>
    <description>for schedule technician vf template</description>
    <inlineHelpText>for schedule technician vf template</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>