Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Technician_Signature__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Technician_Signature__c</fullName>
    <label>Technician Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>