Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Term_Details_FSR__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Term_Details_FSR__c</fullName>
    <label>Term Details FSR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>