Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <length>50</length>
    <type>Text</type>
</CustomField>