Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Total_Amount_before_taxes__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Total_Amount_before_taxes__c</fullName>
    <label>Total Amount before taxes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>