Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Total_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Total_Labor_Hours__c</fullName>
    <label>Total Labor Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>