Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Total_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Total_Net_Price__c</fullName>
    <description>Total Net Price</description>
    <label>Total Net Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>