Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Unit_Discount__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Unit_Discount__c</fullName>
    <description>Unit Discount</description>
    <label>Unit Discount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>