Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <type>TextArea</type>
</CustomField>