Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/fields/SMAX_PS_Work_Complete__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Work_Complete__c</fullName>
    <label>Work Complete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>