Perkin-UAT/force-app/main/default/objects/SMAX_PS_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SMAX_PS_Owned_By_Company__c</columns>
    <columns>SMAX_PS_Email_ID__c</columns>
    <columns>SMAX_PS_Country__c</columns>
    <columns>SMAX_PS_Is_Default__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>SMAX_PS_Logo_Image__c</columns>
    <columns>SMAX_PS_Service_Report__c</columns>
    <columns>SMAX_PS_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>